# lightdm-webkit-greeter

./: .gitmodules  Cargo.toml  README.md  install.sh
data/: lightdm-webkit-xgreeter.desktop  web-greeter.yml
ext/: Cargo.toml
ext/src/: jscext.rs  lib.rs  lightdmext.rs
greeter/: Cargo.toml
greeter/src/: application.rs  browser.rs  logger.rs  main.rs  settings.rs  theme.rs  webview.rs
greeter/src/bridge/: greeter_comm.rs  greeter_config.rs  lightdm.rs  mod.rs  theme_utils.rs
greeter/src/resources/: lightdm.js  resources.gresource.xml
webext/: Cargo.toml
webext/src/: extension.rs  lib.rs
webext/src/extension/: greeter_comm.rs  greeter_config.rs  lightdm.rs  lightdm_signal.rs  mod.rs  theme_utils.rs
