[package]
name = "lightdm-webkit-greeter"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
clap = { version = "4.5.46", features = ["derive"] }
gtk = { workspace = true }
gdkx = { package = "gdk4-x11", version = "0.10", features = ["xlib"] }
webkit = { package = "webkit6", version = "0.5" }
jsc = { workspace = true }
lightdm = { git = "https://github.com/ZaynChen/lightdm-rs.git", version = "0.1.0" }
ext = { workspace = true }
# greetd_ipc = { version = "0.10", features = ["codec"] }

[build-dependencies]
glib-build-tools = "0.21.0"
# cc = "1.2.35"
# pkg-config = "0.3.32"
