[package]
name = "lightdm-webkit-greeter-webext"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
gtk = { workspace = true }
jsc = { workspace = true }
wwpe = { package = "webkit-web-process-extension6", version = "0.5" }
ext = { workspace = true }
